--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,7 @@
 
   <groupId>tech.stackable</groupId>
   <artifactId>druid-opa-authorizer</artifactId>
-  <version>23.11-SNAPSHOT</version>
-  <!-- The version of the OPA Authorizer coincides with the Stackable Data Platform (SDP) version -->
+  <version>26.0.0-stackable0-SNAPSHOT</version>
 
   <name>Apache Druid OpenPolicyAgent Authorizer</name>
   <url>https://github.com/stackabletech/druid-opa-authorizer/</url>
