--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,6 +8,8 @@ on:
     branches:
       - main
       - "renovate/**"
+    tags:
+      - "**"
   pull_request:
   merge_group:
 
@@ -18,15 +20,13 @@ jobs:
     strategy:
       matrix:
         profile:
-          - druid-023
-          - druid-24
-          - druid-26
-          - druid-27
+          - druid-26.0.0
+          - druid-27.0.0
 
     steps:
-      - uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # tag=v4.0.0
+      - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # tag=v4.1.0
       - name: Set up JDK 11
-        uses: actions/setup-java@cd89f46ac9d01407894225f350157564c9c7cee2 # tag=v3.12.0
+        uses: actions/setup-java@0ab4596768b603586c0de567f2430c30f5b0d2b0 # tag=v3.13.0
         with:
           java-version: '11'
           distribution: 'temurin'
