--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,11 +22,12 @@ jobs:
         profile:
           - druid-26.0.0
           - druid-27.0.0
+          - druid-28.0.1
 
     steps:
-      - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # tag=v4.1.0
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # tag=v4.1.1
       - name: Set up JDK 11
-        uses: actions/setup-java@0ab4596768b603586c0de567f2430c30f5b0d2b0 # tag=v3.13.0
+        uses: actions/setup-java@387ac29b308b003ca37ba93a6cab5eb57c8f5f93 # tag=v4.0.0
         with:
           java-version: '11'
           distribution: 'temurin'
@@ -34,4 +35,4 @@ jobs:
       - name: Build with Maven
         run: mvn -B verify -P${{ matrix.profile }}
       - name: Update dependency graph
-        uses: advanced-security/maven-dependency-submission-action@c5ad0fd6b977364190852883b46728f25a9617c3 # tag=v3.0.2
+        uses: advanced-security/maven-dependency-submission-action@ed72a3242c5331913886b41ca9ea66c9195ebdaa # tag=v4.0.0
