--- a/pom.xml
+++ b/pom.xml
@@ -160,7 +160,7 @@
             <banDuplicatePomDependencyVersions />
             <banDynamicVersions />
             <requireActiveProfile>
-              <profiles>druid-26.0.0,druid-28.0.1,druid-30.0.0</profiles>
+              <profiles>druid-26.0.0,druid-30.0.0</profiles>
               <all>false</all>
             </requireActiveProfile>
             <requireJavaVersion>
@@ -318,23 +318,6 @@
         <guava.version>16.0.1</guava.version>
         <guice.version>4.1.0</guice.version>
         <jackson.version>2.10.5</jackson.version>
-      </properties>
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.druid</groupId>
-          <artifactId>druid-processing</artifactId>
-          <version>${druid.version}</version>
-          <scope>provided</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-    <profile>
-      <id>druid-28.0.1</id>
-      <properties>
-        <druid.version>28.0.1</druid.version>
-        <guava.version>31.1-jre</guava.version>
-        <guice.version>4.1.0</guice.version>
-        <jackson.version>2.12.7</jackson.version>
       </properties>
       <dependencies>
         <dependency>
