--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,13 +5,14 @@ on:
   workflow_dispatch:
     inputs:
       druid-version:
-        description: 'Druid version to build the authorizer for. This requires an existing profile with the same name.'
+        description: 'Select the Druid version to build the authorizer for.'
         required: true
+        type: choice
+        options:
+          - druid-26.0.0
+          - druid-30.0.0
       stackable-version:
-        description: 'The stackable "patch" version to use for this release (starting at 0 and counting up, e.g. "0")'
-        required: true
-      java-version:
-        description: 'The Java version to use'
+        description: 'The stackable "patch" version to use for this release (e.g., "0").'
         required: true
       next-stackable-version:
         description: 'The next stackable version to use, this updates the POM (without the "-SNAPSHOT"). If stackable-version is 0 then set this to 1 etc.'
@@ -22,6 +23,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Set Java Version
+        id: set_java_version
+        run: |
+          if [ "${{ github.event.inputs.druid-version }}" = "druid-26.0.0" ]; then
+            echo "JAVA_VERSION=11" >> $GITHUB_ENV
+          elif [ "${{ github.event.inputs.druid-version }}" = "druid-30.0.0" ]; then
+            echo "JAVA_VERSION=17" >> $GITHUB_ENV
+          else
+            echo "JAVA_VERSION=unknown" >> $GITHUB_ENV
+          fi
+
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
       - name: Release
@@ -29,14 +41,14 @@ jobs:
         env:
           # This action uses a Dockerfile with Java preinstalled
           # See here for the list of supported JDKs: https://github.com/qcastel/docker-maven-release/blob/master/Dockerfile
-          JAVA_HOME: /usr/lib/jvm/java-${{ github.event.inputs.java-version }}-openjdk/
+          JAVA_HOME: /usr/lib/jvm/java-${{ env.JAVA_VERSION }}-openjdk/
         with:
           git-release-bot-name: "stacky-mcstackface"
           git-release-bot-email: "info@stackable.tech"
-          maven-args: "clean install -P druid-${{ github.event.inputs.druid-version }}"
+          maven-args: "clean install -P ${{ github.event.inputs.druid-version }}"
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
           maven-release-version-number: ${{ github.event.inputs.druid-version }}-stackable${{ github.event.inputs.stackable-version }}
-          maven-development-version-number: ${{ github.event.inputs.druid-version }}-stackable${{ github.event.inputs.next-stackable-version}}-SNAPSHOT
+          maven-development-version-number: ${{ github.event.inputs.druid-version }}-stackable${{ github.event.inputs.next-stackable-version }}-SNAPSHOT
           release-branch-name: "main"
 
       - name: Release to GitHub
