chore(deps): update all dependencies (patch only)
| datasource  | package                                        | from     | to       |
| ----------- | ---------------------------------------------- | -------- | -------- |
| github-tags | qcastel/github-actions-maven-release           | v1.12.41 | v1.12.43 |
| maven       | com.diffplug.spotless:spotless-maven-plugin    | 2.44.2   | 2.44.4   |
| maven       | com.github.spotbugs:spotbugs                   | 4.9.0    | 4.9.3    |
| maven       | org.apache.maven.plugins:maven-surefire-plugin | 3.5.2    | 3.5.3    |
| maven       | org.apache.maven.plugins:maven-install-plugin  | 3.1.3    | 3.1.4    |
| maven       | org.apache.maven.plugins:maven-deploy-plugin   | 3.1.3    | 3.1.4    |
| maven       | org.apache.maven.plugins:maven-clean-plugin    | 3.4.0    | 3.4.1    |

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Release
-        uses: qcastel/github-actions-maven-release@681756a2798ce7fc477d2db2fefcdec6670f6fed # tag=v1.12.41
+        uses: qcastel/github-actions-maven-release@0fd7a9e2ba3a4af8728a88cf57b11592fd8bdd0f # v1.12.43
         env:
           # This action uses a Dockerfile with Java preinstalled
           # See here for the list of supported JDKs: https://github.com/qcastel/docker-maven-release/blob/master/Dockerfile
