--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,12 +22,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write
     steps:
       - name: Set Java Version
         id: set_java_version
         run: |
-          if [ "${{ github.event.inputs.druid-version }}" == "druid-30.0.0" ] || [ "${{ github.event.inputs.druid-version }}" == "druid-30.0.1" ] || [ "${{ github.event.inputs.druid-version }}" == "druid-31.0.1" ]; then
+          if [ [ "${{ github.event.inputs.druid-version }}" == "druid-30.0.1" ] || [ "${{ github.event.inputs.druid-version }}" == "druid-31.0.1" || "${{ github.event.inputs.druid-version }}" == "druid-33.0.0" ] ]; then
             echo "JAVA_VERSION=17" >> "$GITHUB_ENV"
           else
             echo "JAVA_VERSION=unknown" >> "$GITHUB_ENV"
@@ -35,7 +36,7 @@ jobs:
 
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-      - name: Release
+      - name: Build a Release
         uses: qcastel/github-actions-maven-release@0fd7a9e2ba3a4af8728a88cf57b11592fd8bdd0f # v1.12.43
         env:
           # This action uses a Dockerfile with Java preinstalled
@@ -50,14 +51,21 @@ jobs:
           maven-development-version-number: ${{ github.event.inputs.druid-version }}-stackable${{ github.event.inputs.next-stackable-version }}-SNAPSHOT
           release-branch-name: "main"
 
-      - name: Release to GitHub
-        uses: softprops/action-gh-release@da05d552573ad5aba039eaac05058a918a7bf631 # v2.2.2
-        with:
-          files: |
-            target/checkout/target/*.jar
-            target/checkout/target/bom.*
-          token: ${{ secrets.GITHUB_TOKEN }}
-          tag_name: release/${{ github.event.inputs.druid-version }}-stackable${{ github.event.inputs.stackable-version }}
-          # Due to our current setup it doesn't make sense to generate release notes automatically because the "previous" version might be for something entirely different (e.g. another Druid version)
-          generate_release_notes: false
-          name: ${{ github.event.inputs.druid-version }}-stackable${{ github.event.inputs.stackable-version }}
+      - run: |
+          set +e
+          ls -al
+          ls -al target
+          ls -al target/checkout
+          ls -al target/checkout/target
+
+      # - name: Release to GitHub
+      #   uses: softprops/action-gh-release@da05d552573ad5aba039eaac05058a918a7bf631 # v2.2.2
+      #   with:
+      #     files: |
+      #       target/checkout/target/*.jar
+      #       target/checkout/target/bom.*
+      #     token: ${{ secrets.GITHUB_TOKEN }}
+      #     tag_name: release/${{ github.event.inputs.druid-version }}-stackable${{ github.event.inputs.stackable-version }}
+      #     # Due to our current setup it doesn't make sense to generate release notes automatically because the "previous" version might be for something entirely different (e.g. another Druid version)
+      #     generate_release_notes: false
+      #     name: ${{ github.event.inputs.druid-version }}-stackable${{ github.event.inputs.stackable-version }}
